# project_processing

./: Dockerfile
docker_shared/program/source/: CMakeLists.txt  bbb.txt  do_opencv.py  face_detection.cpp  func.cpp  passing.cpp  passing.hpp  sample1.cpp  sample1.py
